[project]
name = "hanzo_studio_tensorrt"
description = "TensorRT Node for Hanzo Studio\nThis node enables the best performance on NVIDIA RTX™ Graphics Cards  (GPUs) for Stable Diffusion by leveraging NVIDIA TensorRT."
version = "0.1.2"
license = "LICENSE"
dependencies = [
  "tensorrt>=10.0.1",
  "onnx"
]

[project.urls]
Repository = "https://github.com/hanzoai/studio_TensorRT"

[tool.comfy]
PublisherId = "comfy"
DisplayName = "Hanzo Studio_TensorRT"
Icon = ""
